--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
@@ -18,17 +19,18 @@
     "numbro": "^2.3.6",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-circular-progress-indicator": "^4.2.0",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modalize": "^2.0.13",
     "react-native-pager-view": "^5.4.24",
     "react-native-paper": "^4.12.1",
+    "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
-    "styled-components": "^5.3.5",
-    "victory-native": "^36.4.1"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
