--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.2.5",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "^12.4.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "victory-native": "^36.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
